--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,8 @@
   html,
   body {
     width: 100%;
-    height: 100%;
+    min-height: 100%;
+    overflow-y: auto;
   }
 
   /* Definindo o fundo escuro global */
