--- a/src/index.css
+++ b/src/index.css
@@ -12,11 +12,31 @@
     box-sizing: border-box;
   }
 
+  html {
+    font-size: 90%;
+  }
+
+
+
   html,
   body {
     width: 100%;
     min-height: 100%;
-    overflow-y: auto;
+    overflow-y: scroll;
+    /* habilita o scroll */
+    scrollbar-width: none;
+    /* Firefox */
+    -ms-overflow-style: none;
+    /* IE 10+ */
+
+
+  }
+
+  body::-webkit-scrollbar {
+    width: 0;
+    /* Chrome, Safari e Edge */
+    background: transparent;
+    /* opcional */
   }
 
   /* Definindo o fundo escuro global */
